--- a/Style/Responsive.css
+++ b/Style/Responsive.css
@@ -44,22 +44,13 @@
         max-width: 100%; 
         
     }
-
-}
-
-
-
-
-
-/* Medium Device or Tablet */
-@media screen and (max-width : 960px) {
-    .header-container {
-        flex-direction: column;  
-        text-align: center;
+    .header-name-plate{
+        flex-direction:column;
     }
-    .header-img-container{
-        background-attachment: fixed;
-        align-items: center;
-        
+    .grid-container{
+        display: grid;
+        gap: 15px;
+        grid-template-columns: repeat(1,1fr);
     }
+
 }
