--- a/Style/style.css
+++ b/Style/style.css
@@ -79,3 +79,39 @@
     display: flex;
     justify-content: space-between;
 }
+
+.header-name-plate {
+    /* border: 2px solid red; */
+    margin: 60px auto;
+    width: 70%;
+    text-align: center;
+    display: flex;
+    justify-content: space-around;
+
+}
+
+/* main section style */
+main {
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.single-image {
+    /* border: 2px solid blueviolet; */
+    /* width: 30%; */
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.15);
+    padding: 25px;
+}
+.single-image p{
+    width: 60%;
+    color:#787885;
+    font-weight: 700;
+    
+}
+.grid-container{
+    display: grid;
+    gap: 15px;
+    grid-template-columns: repeat(3,1fr);
+}
