--- a/Style/Responsive.css
+++ b/Style/Responsive.css
@@ -52,5 +52,12 @@
         gap: 15px;
         grid-template-columns: repeat(1,1fr);
     }
+    .last-section{
+        flex-direction: column;
+    }
+    .last-image{
+        order: 2;
+        max-width: 50%;
+    }
 
 }
